# dz-vis

./: .gitignore  3D_MIGRATION_SUMMARY.md  BUGFIX_REPORT.md  CAMERA_TROUBLESHOOTING.md  CODEBASE_ORGANIZATION.md  COUNTDOWN_BRIEF_FOR_MODELER.md  COUNTDOWN_MODEL_REQUIREMENTS.md  DEBUG_SANDBOX_MODEL.md  GSTREAMER_MIGRATION_GUIDE.md  HIGH_RISK_FIXES_SUMMARY.md  LINUX_CAMERA_SETUP.md  MEDIAMTX_MIGRATION_SUMMARY.md  MEDIAMTX_OPTIMIZATION_SUMMARY.md  MEDIAMTX_STREAM_FIX.md  MEMORY_LEAK_AUDIT_REPORT.md  MEMORY_LEAK_FIX_REPORT.md  MODEL_ALIGNMENT.md  MSE_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PATH_TRIMMING_DEBUG_GUIDE.md  PATH_TRIMMING_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_GUIDE.md  RENDERING_OPTIMIZATION.md  RESOURCE_CLEANUP_GUIDE.md  RTSP_OPTIMIZATION.md  SOCKET_PROTOCOL_SPECIFICATION.md  SOCKET_USAGE_GUIDE.md  TAURI_OPTIMIZATION_REPORT.md  TAXI_ICON_CLEANUP_FIX.md  TAXI_ORDER_IMPLEMENTATION_SUMMARY.md  TAXI_ORDER_TRACKING.md  TAXI_TEST_CLIENT_GUIDE.md  TOAST_MIGRATION_GUIDE.md  TRAFFIC_LIGHT_IMPLEMENTATION.md  UBUNTU_WEBRTC_SETUP.md  UV_MAPPING_ISSUE.md  VEHICLE_CONNECTION_FEATURE.md  VEHICLE_SELECTION_UPDATE.md  VMWARE_SVGA_FIX.md  (+14 more)
.cargo/: config.toml
docs/: architecture-optimization.md  build-deploy-optimization.md  code-optimization-recommendations.md  coding-standards.md  font-awesome-migration.md  frame.md  optimization-steps.md  optimization-summary.md  pose-selection-guide.md  project.md  protocol-0x0003.md  protocol.md  troubleshooting.md  udp.md  viewer.md
public/: video-worker.js
public/models/: README.md  car.glb  car.glb copy
public/routes/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
scripts/: adjust_plane_size.js  adjust_sprite_size.js  check_countdown_material.js  check_countdown_uv.js  debug_countdown.js  debug_countdown_texture.js  debug_traffic_light_colors.js  debug_traffic_light_names.js  diagnose-build.sh  test_countdown_update.js  verify-build.sh
src/: App.vue  main.js
src-tauri/: Cargo.toml  PORT_CONFIG.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: mediamtx.yml
src-tauri/src/: config.rs  error.rs  lib.rs  lib.rs.backup  main.rs  mediamtx_manager.rs
src-tauri/src/commands/: gstreamer.rs  media.rs  mediamtx.rs  mod.rs  mse.rs  path.rs  protocol_config.rs  protocol_processing.rs  sandbox.rs  settings.rs  system.rs  utils.rs  vehicle.rs  vehicle_state.rs  video_processing.rs
src-tauri/src/database/: mod.rs  models.rs  vehicle_db.rs
src-tauri/src/gstreamer_streamer/: mod.rs  websocket.rs
src-tauri/src/mse_streamer/: mod.rs  websocket.rs
src-tauri/src/protocol_processing/: batch_processor.rs  builder.rs  converter.rs  message_types_config.rs  mod.rs  parser.rs  types.rs  validator.rs
src-tauri/src/rtsp_converter/: converter.rs  hls_server.rs  mod.rs
src-tauri/src/rtsp_stream/: mod.rs  rtsp_proxy.rs  stream_server.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/path_loader/: mod.rs
src-tauri/src/services/sandbox/: mod.rs
src-tauri/src/services/vehicle/: mod.rs
src-tauri/src/socket/: mod.rs  protocol.rs  server.rs
src-tauri/src/udp_video/: mod.rs  protocol.rs  server.rs
src-tauri/src/utils/: byte_utils.rs  mod.rs  time_utils.rs  validation.rs
src-tauri/src/video_processing/: frame_processor.rs  frame_statistics.rs  jpeg_validator.rs  mod.rs  types.rs
src-tauri/src/video_stream/: rtsp_proxy.rs  stream_server.rs
src/bridge/: vehicleBridge.js
src/components/: CarButton.vue  CarCamera.vue  CarInfo.vue  CarList.vue  CarSettings.vue  CardWithBorder.vue  Dashboard.vue  DrivingBehaviorChart.vue  ErrorBoundary.vue  FontAwesomeIcon.vue  Header.vue  LogViewer.vue  MenuVisibilitySettings.vue  ProtocolPerformanceMonitor.vue  SandboxSettingsManager.vue  Sensor.vue  StatusIndicator.vue  SteeringWheel.vue  TitleBar.vue  VehicleConnectionManager.vue  VehicleTimeChart.vue  VideoPerformanceMonitor.vue
src/components/Scene3D/: index.js  index.vue  pathRenderer.js  trafficLightManager.js  vehicleManager.js
src/composables/: useFPS.js  useNetworkStatus.js  useSystemTime.js  useVehicleData.js
src/config/: app.js  constants.js
src/constants/: defaults.js  index.js  limits.js  messageTypes.js  messageTypesLoader.js  performance.js  protocol.js  timing.js  ui.js  validation.js
src/icons/: index.js
src/router/: index.js
src/stores/: car.js
src/styles/: animations.css  base.css  customer.scss  main-layout.scss  main.css  variables.scss
src/utils/: byteUtils.js  coordinateTransform.js  errorHandler.js  eventBus.js  eventThrottle.js  globalErrorHandler.js  logHelper.js  logger.js  mjpegPlayer.js  msePlayer.js  pathManager.js  performance.js  performanceMonitor.js  protocolProcessor.js  resourceCleanup.js  resourcePreloader.js  socketManager.js  stateManager.js  tauri.js  throttle.js  toast.js  validation.js  vehicleAPI.js  vehicleBridge.js  vehicleTypes.js  videoProcessor.js  videoStreamManager.js
src/views/: AutoDrive.vue  Cars.vue  Control.vue  MainLayout.vue  Map.vue  ParallelDriving.vue  Settings.vue
test/: sandbox_client.py  test_client.py  test_client2.py  test_client_vehicle2.py  test_traffic_light.py  test_udp_camera_sender.py  test_udp_camera_sender2.py
test/test_udp/: Makefile
test_udp/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
test_udp/src/: main.cpp
tools/: README.md  test_udp_sender.py  udp_camera_sender.py
