[package]
name = "dz-viz"
version = "0.1.0"
description = "智能沙盘云控平台"
authors = ["DZ Technologies"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dz_viz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
crc = "3.0"
parking_lot = "0.12"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
local-ip-address = "0.6"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
tokio-tungstenite = "0.21"
urlencoding = "2.1"
# 使用系统FFmpeg命令，不使用Rust绑定（避免pkg-config问题）
# File system operations
tempfile = "3.8"
once_cell = "1.19"
log = "0.4.28"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.0.0-rc.1"

