[package]
name = "dz-viz"
version = "0.1.0"
description = "智能沙盘云控平台"
authors = ["DZ Technologies"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dz_viz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# ===== Tauri 核心 =====
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-log = "2.0"

# ===== 序列化 =====
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ===== 异步运行时 =====
# 优化：只启用必需的 tokio features，减少编译时间和二进制大小
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "process"] }
futures-util = "0.3"

# ===== 网络通信 =====
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "json"], default-features = false }
local-ip-address = "0.6"

# ===== 错误处理（保留anyhow用于 MediaMTX 管理器）=====
anyhow = "1"

# ===== 数据处理 =====
bytes = "1"
base64 = "0.22"
urlencoding = "2"
crc = "3"

# ===== 数据库（注意：sqlx 0.6 已过时，但为稳定性暂时保留）=====
# TODO: 考虑升级到 sqlx 0.7+ 或迁移到 rusqlite（更轻量）
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }

# ===== 日期时间 =====
chrono = { version = "0.4", features = ["serde"] }

# ===== UUID =====
uuid = { version = "1", features = ["v4", "serde"] }

# ===== 同步原语 =====
parking_lot = "0.12"
once_cell = "1"

# ===== 错误处理 =====
thiserror = "1"

# ===== 文件系统 =====
dirs = "5"
tempfile = "3"

# ===== 日志 =====
log = "0.4" # 使用旧版本，避免 edition2024

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.0.0-rc.1"

# ========== 生产环境编译优化 ==========
# 这些优化可以显著减少二进制大小和提升性能
# 不会影响应用的正常运行
[profile.release]
# 优化级别：3 = 最大化速度，z = 最小化体积
# 使用 "3" 优先保证性能
opt-level = 3

# 链接时优化（LTO）- 可以减少 10-20% 的体积
# "thin" 是平衡模式，编译时间合理且效果好
lto = "thin"

# 移除调试符号 - 可以减少 20-30% 的体积
# 生产环境不需要调试符号
strip = true

# 代码生成单元数量
# 16 是默认值，保持编译速度和优化效果的平衡
codegen-units = 16

