cmake_minimum_required(VERSION 3.16)
project(test_udp_sender LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(OpenCV REQUIRED)

add_executable(udp_video_sender src/main.cpp)
target_include_directories(udp_video_sender PRIVATE ${OpenCV_INCLUDE_DIRS})
target_link_libraries(udp_video_sender PRIVATE ${OpenCV_LIBS})
